<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proofnest_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.ProofNest.Toolbar.Back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_content_height"
            app:title="@string/report_final_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            android:paddingBottom="@dimen/bottom_content_padding">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieReport"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="32dp"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/lottie_loading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/report_ready_title"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                android:textColor="@color/proofnest_on_surface" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/report_ready_body"
                android:textAppearance="@style/TextAppearance.ProofNest.Muted" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPreview"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/report_preview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonExport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/footer_button_margin_top"
                android:text="@string/report_generate_share"
                app:icon="@drawable/ic_description" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
