<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proofnest_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.ProofNest.Toolbar.Back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_content_height"
            app:title="@string/disputes_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDisputes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="@dimen/bottom_content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_dispute" />

    <LinearLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/content_padding"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_disputes_title"
            android:textAppearance="@style/TextAppearance.ProofNest.CardTitle" />

        <TextView
            android:id="@+id/textEmptySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_disputes_subtitle"
            android:textAppearance="@style/TextAppearance.ProofNest.Muted" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRaiseDispute"
        style="@style/Widget.ProofNest.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/action_raise_dispute"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_add"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
